<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DeRemate</string>
    <string name="shopping_cart_title">Shopping Cart</string>
    <string name="content_description_cart">Click to see Shopping Cart</string>
    <string name="login_title">Log In with your phone number, e-mail or user</string>
    <string name="login_input">Phone number, e-mail or user</string>
    <string name="login_btn">Continue</string>
    <string name="login_btn_register">Create account</string>
    <string name="copyright">Copyright 1997–2022 JoseIPareja</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_purchases">My purchases</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_history">Search history</string>
    <string name="menu_account">My account</string>
    <string name="menu_help">Help</string>
    <string name="menu_title">Log in to your account</string>
    <string name="menu_description">See details of your shipment and personalize your experience.</string>
    <string name="menu_btn">Log in</string>
    <string name="signup_title">Your data</string>
    <string name="signup_description">Validate your data to log in or create an account.</string>
    <string name="signup_email_title">Validate your e-mail</string>
    <string name="signup_email_description">You will use it to recover your account.</string>
    <string name="signup_name_title">Complete your name</string>
    <string name="signup_name_description">Choose how you would like to be called.</string>
    <string name="signup_phone_title">Validate your phone</string>
    <string name="signup_phone_description">You will use it to log in.</string>
    <string name="signup_password_title">Create your password</string>
    <string name="signup_password_description">You will use it to log in.</string>
</resources>